src/pages/commands/index.styl
:host
  --sidebar-width: 192px

.container
  max-width: var(--content-width)
  margin: 0 auto
  flex: 1
  display: flex
  min-height: calc(100vh - var(--header-height) * 2)

page-body
  background-image: linear-gradient(to right, var(--color-grey-darker) 50%, var(--color-grey) 50%)

#categories-container
  width: var(--sidebar-width)
  position: fixed
  top: var(--header-height)
  bottom: 0
  overflow-y: auto
  z-index: 2

#categories
  display: flex
  flex-direction: column
  align-items: center
  gap: 10px

  a
    text-decoration: none
    color: var(--color-text-white)
    text-transform: capitalize
    width: calc(var(--sidebar-width) - 40px)
    height: 40px
    padding: 0 10px
    display: flex
    align-items: center
    transition: background-color .15s
    font-weight: 700
    text-shadow: var(--text-shadow)
    background-color: var(--color-grey-light)
    border-radius: 7.5px
    user-select: none
    cursor: pointer
    
    &:hover
      background-color: var(--color-blue)
      
    > *
      transition: transform .15s

    > span
      max-width: 100%
      text-overflow: ellipsis
      overflow: hidden

    &:active > *
      transform: translateY(3px)
      
    &#category-back
      height: 30px
      font-size: 0.9rem
      margin-top: 10px
      background-color: transparent
      text-transform: initial
      
      svg
        height: 20px
        width: 20px
        fill: white
        margin: 0 5px 0 -5px
        filter: drop-shadow(var(--text-shadow))
      
      &:hover
        background-color: var(--color-grey-light)

      &:active > svg
        transform: translateY(3px)

.category-title
  text-align: center
  padding: 20px 0
  font-size: 1.5rem
  font-weight: 700
  text-shadow: var(--text-shadow)
  
  &.subcategory-title
    font-size: 1.2rem

#main
  margin-left: var(--sidebar-width)
  background-color: var(--color-grey)
  min-height: 100%
  flex: 1
  box-shadow: -5px 0 10px var(--color-box-shadow)
  position: relative
  z-index: 2
  display: flex
  justify-content: center

.commands-home
  display: flex
  flex-direction: column
  align-items: center
  flex: 1
  text-align: center
  
  p
    max-width: 512px

.category-info
  min-width: calc(100vw - var(--header-height) * 2)

  h2
    margin-top: 40px
    text-shadow: var(--text-shadow)
    
  img
    filter: drop-shadow(var(--box-shadow))
    max-width: 100%

.ping
  background-color: var(--color-ping)
  border-radius: 3px
  padding: 2px
  color: var(--color-ping-text)
  cursor: pointer
  transition: background-color .05s, color .05s
  user-select: none
  
  &:hover
    background-color: var(--color-ping-hover)
    color: var(--color-text-white)

#breadcrumbs-container
  position: fixed
  height: var(--header-height)
  background-color: var(--color-grey-dark)
  width: calc(min(100%, var(--content-width)) - var(--sidebar-width))
  display: flex
  justify-content: space-between
  box-shadow: var(--box-shadow)
  z-index: 1

#breadcrumbs::-webkit-scrollbar
  height: 4px

#breadcrumbs::-webkit-scrollbar-thumb
  height: 4px

#breadcrumbs
  display: flex
  align-items: center
  padding: 0 10px
  overflow-x: auto
  overflow-y: hidden
  max-width: calc(100% - 168px)
  direction: rtl;

  svg
    fill: var(--color-text-white)
    height: 20px
    width: 20px
    min-height: 20px
    min-width: 20px
    filter: drop-shadow(var(--text-shadow))
    
  a
    padding 0 10px
    height: var(--header-height)
    display: flex
    align-items: center
    color: var(--color-text-white)
    text-decoration: none
    font-weight: 700
    transition: background-color .15s
    text-shadow: var(--text-shadow)
    
    &:not(#command-breadcrumb)
      text-transform: capitalize
      
    &:hover
      background-color: var(--color-grey-light)
    
    > *
      transition: transform .15s

    &:active > *
      transform: translateY(3px)
  
.hidden
  display: none
  
#search
  display: flex
  align-items: center
  background-color: var(--color-grey-light)
  width: 168px
  position: relative
  padding-right: 10px
  
  svg
    width: 32px
    height: 32px
    padding: 0 4px
    fill: var(--color-text-white)
    
  input
    position: absolute
    left: 40px
    border: none
    outline: none
    background-color: transparent
    height: 40px
    width: 128px
    font-size: 1.2rem
    padding: 0
    z-index: 1
  
    &::placeholder
      color: var(--color-grey-light)
      filter: brightness(2)
      
#search-results
  position: absolute
  background-color: var(--color-grey-light)
  top: 100%
  right: 0
  min-width: @css{min(100vw, 512px)}
/* ... */

